# FPGAlign

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
.github/config/: codechecker.skip  custom.imp
.github/workflows/: ci_linux.yml  ci_macos.yml  cron_iwyu.yml  cron_sanitizer.yml  lint.yml
cmake/: cxx_config.cmake  output_directories.cmake  package-lock.cmake
cmake/test/: add_local_data.cmake  config.cmake  declare_datasource.cmake
include/fpgalign/: argument_parsing.hpp  colored_strings.hpp  config.hpp  meta.hpp
include/fpgalign/contrib/: minimiser_hash.hpp  slotted_cart_queue.hpp
include/fpgalign/search/: search.hpp
include/fpgalign/utility/: compat.hpp  fmindex.hpp  ibf.hpp  meta.hpp  reference.hpp
src/: CMakeLists.txt  argument_parsing.cpp  colored_strings.cpp  fpgalign.cpp
src/search/: do_alignment.cpp  fmindex.cpp  ibf.cpp  search.cpp
src/utility/: fmindex.cpp  ibf.cpp  meta.cpp  reference.cpp
test/: CMakeLists.txt  api_fastq_coversion_test.cpp  app_test.hpp  cli_fastq_coversion_test.cpp  fpgalign_test.cpp
test/data/: REUSE.toml  datasources.cmake  list.txt
